src/adapter/inbound/tui/app/snapshots/codex_exec_loop_native__adapter__inbound__tui__app__shell_rendering__tests__inline_operator_ribbon_attention_80.snap
---
source: src/adapter/inbound/tui/app/shell_rendering_tests.rs
expression: narrow
---
"Akra / root  ·  READY  ·  queue off  ·  agents off  ·  terminals 0              "
"! DEGRADED  ·  warning 1  ·  runtime notice 1  ·  Ctrl+D details                "
"╭ Task                                                                          "
"│ > Describe a task or type : for commands                                      "
"╰  Type a task  |  : commands                                                   "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
