src/adapter/inbound/tui/app/snapshots/codex_exec_loop_native__adapter__inbound__tui__app__shell_rendering__tests__inline_operator_ribbon_diagnostics_120.snap
---
source: src/adapter/inbound/tui/app/shell_rendering_tests.rs
expression: diagnostics
---
"Akra / Diagnostics / inline inspection                                                                                  "
"Inspect readiness without leaving the live shell.                                                                       "
"Startup                                                                                                                 "
"status: ready                                                                                                           "
"Warnings                                                                                                                "
"operator warning: app-server sent notification `remoteControl:raw-diagnostic-payload`                                   "
"runtime notice: bridge reconnect completed with fallback transport                                                      "
"Keys                                                                                                                    "
"Esc/Ctrl+C: close    r: rerun checks                                                                                    "
"Ctrl+o: recent sessions                                                                                                 "
"Checks                                                                                                                  "
"[ok] codex binary: codex                                                                                                "
"Akra / root  ·  READY  ·  queue off  ·  agents off  ·  terminals 0  ·  gpt-5.5/high                                     "
"! DEGRADED  ·  runtime degraded  ·  warning 1  ·  runtime notice 1  ·  Ctrl+D details                                   "
" > Describe a task or type : for commands                                                                               "
" Type a task  |  : commands                                                                                             "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
