src/adapter/inbound/tui/app/snapshots/codex_exec_loop_native__adapter__inbound__tui__app__shell_rendering__tests__inline_progressive_activity_inspector_narrow.snap
---
source: src/adapter/inbound/tui/app/shell_rendering_tests.rs
expression: narrow
---
"Akra / Activity / inline inspection             "
"filter: diff    > Diff    Output                "
"diff · 한글 wide detail | 0-19 / 795 B          " Hidden by multi-width symbols: [(8, " "), (10, " ")]
"   한글 wide detail                             " Hidden by multi-width symbols: [(4, " "), (6, " ")]
"Keys                                            "
"Up/Down: card | Enter/e: detail                 "
"◦ Working (0s • waiting for response / inter...)"
"notice: activity: active:command | diff:+1 -1 h1"
">                                               "
"prompt: Enter queue | Tab steer | Ctrl+j nl     "
