src/adapter/inbound/tui/app/snapshots/codex_exec_loop_native__adapter__inbound__tui__app__shell_rendering__tests__inline_progressive_activity_inspector_wide.snap
---
source: src/adapter/inbound/tui/app/shell_rendering_tests.rs
expression: wide
---
"Akra / Activity / inline inspection                                                                                     "
"> Diff      Output                                                                                                      "
"retained:795/795 B  history:incomplete                                                                                  "
"Diff | 0-91 / 795 B                                                                                                     "
"한글 wide detail                                                                                                        " Hidden by multi-width symbols: [(1, " "), (3, " ")]
"@@ -1 +1 @@                                                                                                             "
"-old value                                                                                                              "
"+AKRA_ACTIVITY_DETAIL_SECRET\x1b[31m                                                                                    "
"detail line 00                                                                                                          "
"Keys                                                                                                                    "
"Tab/Shift+Tab/Left/Right: view | Up/Down/PgUp/PgDn: page | Home: first | Esc: close                                     "
"Akra  |  thread: Progressive activity                                                                                   "
"◦ Working (0s • waiting for response / interrupt runtime-...)                                                           "
"notice: activity: active:command | diff:+1 -1 h1 | cmd:52 lines | ctx:75.00% | history:bounded | model:gpt-5.5          "
">                                                                                                                       "
"prompt: Enter queue | Tab steer | Ctrl+j nl                                                                             "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
