src/adapter/inbound/tui/app/snapshots/codex_exec_loop_native__adapter__inbound__tui__app__shell_rendering__tests__inline_progressive_activity_rail_narrow.snap
---
source: src/adapter/inbound/tui/app/shell_rendering_tests.rs
expression: narrow
---
"                                                "
"                                                "
"                                                "
"                                                "
"                                                "
"Akra  |  thread: Progressive activity           "
"◦ Working (0s • waiting for response / inter...)"
"notice: activity: active:command | diff:+1 -1 h1"
">                                               "
"prompt: type now  |  Enter when idle            "
