src/adapter/inbound/tui/app/snapshots/codex_exec_loop_native__adapter__inbound__tui__app__shell_rendering__tests__inline_progressive_activity_rail_wide.snap
---
source: src/adapter/inbound/tui/app/shell_rendering_tests.rs
expression: wide
---
"                                                                                                                                                                "
"                                                                                                                                                                "
"                                                                                                                                                                "
"                                                                                                                                                                "
"                                                                                                                                                                "
"                                                                                                                                                                "
"                                                                                                                                                                "
"                                                                                                                                                                "
"                                                                                                                                                                "
"                                                                                                                                                                "
"Akra / progressive-activity  ·  READY  ·  queue off  ·  agents off  ·  terminals 1  ·  gpt-5.5/high  ·  ctx 75%                                                 "
"◦ Waiting for model response (0s • interrupt runtime-native)                                                                                                    "
"notice: activity: active:command | diff:+1 -1 h1 | cmd:2 lines | ctx:75.00% | model:gpt-5.5 | task:P0-D3 rail                                                   "
"╭ Task                                                                                                                                                          "
"│ > Describe a task or type : for commands                                                                                                                      "
"╰  Type a follow-up  |  Tab steers after typing                                                                                                                 "
"                                                                                                                                                                "
"                                                                                                                                                                "
"                                                                                                                                                                "
"                                                                                                                                                                "
"                                                                                                                                                                "
"                                                                                                                                                                "
"                                                                                                                                                                "
"                                                                                                                                                                "
