src/adapter/inbound/tui/app/snapshots/codex_exec_loop_native__adapter__inbound__tui__app__shell_rendering__tests__narrow_exit_confirmation.snap
---
source: src/adapter/inbound/tui/app/shell_rendering_tests.rs
expression: rendered
---
"Akra / root  •  ready  •  queue: off            "
" > Describe a task or type : for commands       "
" Type a task  |  : commands                     "
"                                                "
"                                                "
"                                                "
"      ┌Akra / Confirm Exit───────────────┐      "
"      │You are already at the shell home.│      "
"      │Exit codex-exec-loop?             │      "
"      │                                  │      "
"      │y: exit    n: stay                │      "
"      └──────────────────────────────────┘      "
"                                                "
"                                                "
"                                                "
"                                                "
"                                                "
"                                                "
