src/adapter/inbound/tui/app/snapshots/codex_exec_loop_native__adapter__inbound__tui__app__shell_rendering__tests__parallel_operations_board_160.snap
---
source: src/adapter/inbound/tui/app/shell_rendering_tests.rs
expression: wide
---
"Akra / Parallel Operations / inline inspection                                                                                                                  "
"ON  ·  CLEANUP  ·  focused inspection                                                                                                                           "
"Overview                                                                                                                                                        "
"CLEANUP  ·  slots 2/3  ·  accepted queue 3  ·  delivery 2                                                                                                       "
"No active blocker · unknown facts remain unknown                                                                                                                "
"Lifecycle                   Agent Lanes                                                                      Selected Lane                                      "
"● now merge pending          slot-1 RUNNING Implementation · Commercial lane 1 · →Commit                     slot-2 REVIEW Verification · →Review               "
"00:26 merge pending         >slot-2 REVIEW Verification · Commercial lane 2 · →Review                        Commercial lane 2 · agent-2 · 12m02s               "
"00:25 pr pending             slot-3 CLEANUP Documentation · Commercial lane 3 · →Cleanup                     branch codex/para...  ·  wt pool/s...              "
"00:24 official                                                                                               ✓Commit ✓Validation ✓PR ▶Review                    "
"00:23 ledger refr...                                                                                         ·Integration ·Remote verify ·Cleanup               "
"Accepted Queue                                                                                                                                                  "
"#4 DISPATCH  Commercial lane 4                                                                                                                                  "
"[12:30:00] Supervisor: typed operations event 5                                                                                                                 "
"Command Hints                                                                                                                                                   "
"Enter inspect  ·  V agent view  ·  Ctrl+R refresh  ·  Ctrl+P off  ·  Esc close                                                                                  "
"                                                                                                                                                                "
"                                                                                                                                                                "
"                                                                                                                                                                "
"                                                                                                                                                                "
"                                                                                                                                                                "
"                                                                                                                                                                "
"                                                                                                                                                                "
"                                                                                                                                                                "
"                                                                                                                                                                "
"                                                                                                                                                                "
"                                                                                                                                                                "
"                                                                                                                                                                "
"                                                                                                                                                                "
"                                                                                                                                                                "
"                                                                                                                                                                "
"                                                                                                                                                                "
"                                                                                                                                                                "
"                                                                                                                                                                "
"                                                                                                                                                                "
"                                                                                                                                                                "
